# stdlib_os

./: CMakeLists.txt  fpm.toml  meson.build
.github/workflows/: build.yml
example/: CMakeLists.txt  os_name.f90
src/: CMakeLists.txt  meson.build  os.f90  os.name.in  os_path.F90  os_path.f90  stdlib_os.f90  stdlib_os_c.f90  stdlib_os_internal.f90  stdlib_os_internal_c.f90  stdlib_os_path.F90  stdlib_os_path_c.f90  stdlib_os_type.F90  stdlib_test.f90
test/: stdlib_test.f90
